# onshape-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: onshape-api-docs.md
scripts/: debug_features.py
src/onshape_mcp/: __init__.py  auth.py  client.py  server.py
